Removed unnecessary controllers, folders and views.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
             </ul>
 
             <div class="section">
-                <h3>За лекари</h3>
+                <a asp-controller="Navigation" asp-action="ForDocs"><h3>За лекари</h3></a>
                 <img src="~/images/2.jpg" alt="Forest Image" class="sidebar-image" />
             </div>
 
