Added some css to the main part of the website and to the shop. Next step is to choose one of the two themes and make a cohesive design language.

--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -7,8 +7,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <link rel="stylesheet" href="~/css/Shop.css" />
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="js/addtocart.js"></script>
 
 <div class="header">
 	<div class="top-nav">
@@ -46,7 +44,7 @@
 				</div>
 				<div class="productName"><h4>@product.Name</h4></div>
 				<div class="productPrice"><h5>@product.Price</h5></div>
-				<a asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
+				<a class="buy-button" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
 			</div>
 		}
 
