Made the article part of the website responsive.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
 }
 
 <div class="breadcrumbs">
-    <a href="#">Начало</a> > <a href="#">Всички категории</a> > Хомеопатия
+	<a href="#">Начало</a> > <a href="#">Всички категории</a> > Хомеопатия
 </div>
-<iframe width="750" height="500" src="https://www.youtube.com/embed/Gan8B1ljEaM?si=KMN4waAKymJQ6LHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div class="video-container">
+	<iframe width="750" height="500" src="https://www.youtube.com/embed/Gan8B1ljEaM?si=KMN4waAKymJQ6LHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
