--- a/Views/Shop/AddProduct.cshtml
+++ b/Views/Shop/AddProduct.cshtml
@@ -3,24 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="~/css/Admin.css" />
+	<link rel="stylesheet" href="~/css/AddProduct.css" />
 	<title>Login Page</title>
 </head>
 <body>
-<div class="login-container">
-	<h2>Login</h2>
-	<form action="#" method="post">
-		<label for="username">Username:</label>
-		<input type="text" id="username" name="username" required>
-            
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" required>
-            
-		<input type="submit" value="Login">
-	</form>
-</div>
-
-    <script src="js/admin.js"></script>
+<form asp-action="AddProduct" method="post">
+		<div>
+			<label for="URL">Url for image:</label>
+			<input type="text" id="ImageUrl" name="ImageUrl" required />
+		</div>
+	<div>
+		<label for="Name">Product Name:</label>
+		<input type="text" id="Name" name="Name" required/>
+	</div>
+	<div>
+		<label for="Price">Price:</label>
+		<input type="number" id="Price" name="Price" required step="0.01"/>
+	</div>
+		<div>
+			<label for="Quantity">Quantity:</label>
+			<input type="number" id="Quantity" name="Quantity" required step="1" />
+		</div>
+	<div>
+		<label for="Description">Description:</label>
+		<textarea id="Description" name="Description"></textarea>
+	</div>
+	<div>
+		<button type="submit">Add Product</button>
+	</div>
+</form>
 </body>
-</html>
 
