--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -11,6 +11,7 @@
 </script>
 <script src="js/searchbar.js"></script>
 	
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="~/css/Shop.css" />
 
 <div class="header">
@@ -25,7 +26,6 @@
 			@if (User.IsInRole("Admin"))
 			{
 				<li><a asp-controller="Shop" asp-action="AddProduct">Добави продукт</a></li>
-				<li><a asp-controller="Shop" asp-action="AddQuantity">Добави количество</a></li>
 			}
 
 		</ul>
@@ -41,17 +41,40 @@
 
 		@foreach (var product in Model)
 		{
+			if (product.Quantity > 0 && !User.IsInRole("Admin"))
+			{
+				<div class="item">
+					<div class="productImage">
+						<a href="@Url.Action("Details", "Shop", new { id = product.ProductId })">
+							<img src="@Url.Content($"~/images/shop images/{product.ImageUrl}")">
+						</a>
+					</div>
+					<div class="productName"><h4>@product.Name</h4></div>
+					<div class="productPrice"><h5>@product.Price</h5></div>
+					<a class="buy-button" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
 
-			<div class="item">
-				<div class="productImage">
-					<a href="@Url.Action("Details", "Shop", new { id = product.ProductId })">
-						<img src="@Url.Content($"~/images/shop images/{product.ImageUrl}")">
-					</a>
+					@if (User.IsInRole("Admin"))
+					{
+						<a class="btn btn-danger" asp-controller="Shop" asp-action="AddQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
+
+					}
+
 				</div>
-				<div class="productName"><h4>@product.Name</h4></div>
-				<div class="productPrice"><h5>@product.Price</h5></div>
-				<a class="buy-button" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
-			</div>
+			}
+			else if(User.IsInRole("Admin"))
+			{
+				<div class="item">
+					<div class="productImage">
+						<a href="@Url.Action("Details", "Shop", new { id = product.ProductId })">
+							<img src="@Url.Content($"~/images/shop images/{product.ImageUrl}")">
+						</a>
+					</div>
+					<div class="productName"><h4>@product.Name</h4></div>
+					<div class="productPrice"><h5>@product.Price</h5></div>
+					<a class="buy-button" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
+					<a class="btn btn-danger m-2" asp-controller="Shop" asp-action="AddQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
+				</div>
+			}
 		}
 
 	</div>
