Fixed some bugs and added services, the ability to change everything about a product.

--- a/Views/Shop/AddProduct.cshtml
+++ b/Views/Shop/AddProduct.cshtml
@@ -26,7 +26,7 @@
 		</div>
 	<div>
 		<label for="Description">Description:</label>
-		<textarea id="Description" name="Description"></textarea>
+		<textarea id="Description" name="Description" required></textarea>
 	</div>
 	<div>
 		<button type="submit">Add Product</button>
