--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -55,7 +55,7 @@
 
 					@if (User.IsInRole("Admin"))
 					{
-						<a class="btn btn-danger" asp-controller="Shop" asp-action="AddQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
+						<a class="btn btn-danger" asp-controller="Shop" asp-action="ChangeQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
 
 					}
 
@@ -72,7 +72,9 @@
 					<div class="productName"><h4>@product.Name</h4></div>
 					<div class="productPrice"><h5>@product.Price</h5></div>
 					<a class="buy-button" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
-					<a class="btn btn-danger m-2" asp-controller="Shop" asp-action="AddQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
+					<a class="btn btn-danger m-2" asp-controller="Shop" asp-action="ChangeQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
+					<a class="btn btn-danger m-2" asp-controller="Shop" asp-action="Remove" asp-route-productId="@product.ProductId">Премахни продукт</a>
+					<a class="btn btn-danger m-2" asp-controller="Shop" asp-action="Change" asp-route-productId="@product.ProductId">Промени продукт</a>
 				</div>
 			}
 		}
