Implemented Stripe. Next is integrating email sending and making a design for the stripe pages.

--- a/Views/Cart/ViewCart.cshtml
+++ b/Views/Cart/ViewCart.cshtml
@@ -66,7 +66,7 @@
                         <a asp-controller="Shop" asp-action="Index" class="btn btn-outline-secondary btn-lg">
                             <i class="fas fa-arrow-left me-2"></i>Continue Shopping
                         </a>
-                        <a href="#" class="btn btn-primary btn-lg">
+                        <a asp-controller="Payment" asp-action="Checkout" class="btn btn-primary btn-lg">
                             Checkout <i class="fas fa-credit-card ms-2"></i>
                         </a>
                     </div>
