Added a detail page,  styled the view cart page, started creating email sending method, continued added a page where you can choose if you want to pay upon delivery or if you want to pay with card. Also added gatherinfo page, styled in a very basic way.

--- a/Views/Payment/Checkout.cshtml
+++ b/Views/Payment/Checkout.cshtml
@@ -15,8 +15,8 @@
 <div class="container">
 	<div class="py-5 text-center">
 		<h2>Checkout</h2>
-		<p class="lead">Click the button below to proceed with your payment using Stripe.</p>
-		<button type="button" id="checkout-button" class="btn btn-primary">Pay with Stripe</button>
+		<button type="button" id="checkout-button" class="btn btn-primary">Плати с карта</button>
+		<a asp-controller="Shop" asp-action="Index" type="button" id="checkout-cancel-button" class="btn btn-danger">Откажи</a>
 	</div>
 </div>
 
