--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Holistica.Models.Product>
 
 @{
-    ViewData["Title"] = "Homeopathy";
+	ViewData["Title"] = "Homeopathy";
 }
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -10,7 +10,7 @@
 	const searchUrl = '@Url.Action("Search", "Shop")';
 </script>
 <script src="js/searchbar.js"></script>
-	
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="~/css/Shop.css" />
 
@@ -22,7 +22,7 @@
 			<li><a asp-controller="Navigation" asp-action="Homeopathy">Контакти</a></li>
 			<li><a asp-controller="Shop" asp-action="Index">Магазин</a></li>
 			<li><a asp-controller="Cart" asp-action="ViewCart">Виж количка</a></li>
-			
+
 			@if (User.IsInRole("Admin"))
 			{
 				<li><a asp-controller="Shop" asp-action="AddProduct">Добави продукт</a></li>
@@ -31,8 +31,8 @@
 		</ul>
 	</div>
 	<div class="search-bar">
-			@Html.AntiForgeryToken()
-			<input type="text" name="searchInput" placeholder="Търсене..." />
+		@Html.AntiForgeryToken()
+		<input type="text" name="searchInput" placeholder="Търсене..." />
 	</div>
 </div>
 
@@ -53,6 +53,12 @@
 					<div class="productPrice"><h5>@product.Price</h5></div>
 					<a class="buy-button" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">Купи</a>
 
+					<form action="@Url.Action("Details", "Shop")" method="post">
+						@Html.AntiForgeryToken()
+						<input type="hidden" name="productId" value="@product.ProductId" />
+						<input id="details" type="submit" class="buy-button" value="Детайли" />
+					</form>
+
 					@if (User.IsInRole("Admin"))
 					{
 						<a class="btn btn-danger" asp-controller="Shop" asp-action="ChangeQuantity" asp-route-productId="@product.ProductId">Добави количество</a>
@@ -61,7 +67,7 @@
 
 				</div>
 			}
-			else if(User.IsInRole("Admin"))
+			else if (User.IsInRole("Admin"))
 			{
 				<div class="item">
 					<div class="productImage">
