--- a/wwwroot/css/Shop.css
+++ b/wwwroot/css/Shop.css
@@ -143,6 +143,11 @@
         box-shadow: 0 3px 8px rgba(0,0,0,0.15);
         transform: translateY(-2px);
     }
+        
+    #details
+    {
+        margin-top: 10px;
+    }
 
 @media (max-width: 1024px) 
 {
